--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ionic/angular": "^8.1.0",
+    "@microsoft/signalr": "^8.0.0",
     "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "^16.2.14",
     "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^16.2.0",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.19",
     "jasmine-core": "~4.6.0",
@@ -38,7 +40,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.1.3",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "~5.1.3"
   }
 }
